--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="header">
         <div class="wrapper header-wrap">
             <div class="header-logo">
-                <img src="./img/slider/_Logo-removebg-preview.png" alt="">
+                <img src="img/slider/_Logo-removebg-preview.png" alt="">
             </div>
 
             <div class="header-genres">
