--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="header">
         <div class="wrapper header-wrap">
             <div class="header-logo">
-                <img src="img/slider/_Logo-removebg-preview.png" alt="">
+                <img src="img/slider/Warner-Bros-Company-Logo1-removebg-preview.png" alt="">
             </div>
 
             <div class="header-genres">
@@ -28,7 +28,7 @@
 
             <div class="header-search">
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <input type="text" placeholder="Tìm phim bạn cần xem">
+                <input type="text" class="inputSearch"  onchange="handleSearch()" placeholder="Tìm phim bạn cần xem">
             </div>
 
             <div class="header-logn">
@@ -155,7 +155,7 @@
                 <div class="content-main-right">
                     <div class="content-main-right-title">
                         <h1>
-                            Top Rating Movies</h1>
+                            Top Rating Movies Of The Day</h1>
                     </div>
 
                     <ul class="content-main-right-list">
@@ -225,7 +225,7 @@
         <div class="wrapper">
             <div class="footer-socials">
                 <div class="footer-socials-img">
-                    <img src="./img/slider/_Logo-removebg-preview.png" alt="">
+                    <img src="./img/slider/Warner-Bros-Company-Logo1-removebg-preview.png" alt="">
                 </div>
 
                 <div class="footer-socials-app">
