--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <div class="header-search">
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <input type="text" class="inputSearch"  onchange="handleSearch()" placeholder="Tìm phim bạn cần xem">
+                <input type="text" class="inputSearch"  onchange="handleSearchMain()" placeholder="Tìm phim bạn cần xem">
             </div>
 
             <div class="header-logn">
@@ -218,6 +218,12 @@
             </li>
 
             
+        </ul>
+    </div>
+
+    <div id="result-search">
+        <h1 class="result-search-title">Result</h1>
+        <ul class="result-search-list">           
         </ul>
     </div>
 
