--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
 
     <div id="result-search">
         <h1 class="result-search-title">Result</h1>
-        <ul class="result-search-list">           
+        <ul class="result-search-list"> 
+            <div class="loader loader-search"></div>          
         </ul>
     </div>
 
